# news-agent

./: .env.example  .gitignore  Makefile  README.md  config.toml  pyproject.toml  test_langsmith_tracing.py
docs/: DEVELOPER_GUIDE.md  DEVELOPER_NOTES.md  DOCUMENTATION_MAP.md  LANGSMITH_IMPLEMENTATION.md  PHASE2_AGENT_COMPARISON.md  SESSION_STATUS_2025-11-16.md
docs/plans/: 2025-11-15-implementation-results.md  2025-11-15-news-agent-design.md  2025-11-15-news-agent-implementation.md
src/news_agent/: __main__.py  cli.py
src/news_agent/agent/: react_agent.py  tools.py
src/news_agent/analysis/: ranking.py  relevance.py  summarization.py
src/news_agent/cache/: manager.py
src/news_agent/config/: loader.py  models.py
src/news_agent/llm/: provider.py
src/news_agent/mcp/: github_client.py  hn_client.py
src/news_agent/output/: markdown.py  terminal.py
src/news_agent/utils/: retry.py
tests/integration/: test_github_mcp.py  test_hn_mcp.py
tests/unit/: test_cache_manager.py  test_config_loader.py  test_llm_provider.py  test_markdown_output.py  test_ranking.py  test_relevance.py  test_retry.py  test_summarization.py  test_terminal_output.py
